syntax = "proto3";

package api;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/panyam/protoc-gen-dal/tests/gen/go/api;testapi";

// Document represents a document with various fields for testing field merging
message Document {
  uint32 id = 1;
  string title = 2;
  string content = 3;
  string author = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  bool published = 7;
  int32 view_count = 8;
  repeated string tags = 9;
}
